--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coder Portfolio</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
+
+    <link rel="stylesheet" href="style.css" type= "text/css">
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -25,7 +27,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ms-auto">
         <div class="container-fluid">
-            <a class="navbar-brand animate__animated animate__pulse animate__infinite" href="#">Code Portfolio</a>
+            <a class="navbar-brand animate__animated animate__pulse animate__infinite" href="#">Coder Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,7 +63,7 @@
             <div class="row">
                 <div class="col-md-12 bannerText">
                     <h2 class="bannerTitle animate__animated animate__bounceInLeft">Hey There!!</h2>
-                    <p class="bannerDesc animate__animated animate__bounceInRight">A Professional Web Developer</p>
+                    <p class="bannerDesc animate__animated animate__bounceInRight">I'm a Professional Web Developer</p>
                 </div>
             </div>
         </div>
@@ -76,7 +78,7 @@
             <h1 class="text-center">About Me</h1>
             <div class="row">
                 <div class="col-md-4" data-aos="zoom-in">
-                    <img src="/Images/passportPicture.jpg" alt="passportPicture" class="card-img img-fluid">
+                    <img src="./Images/passportPicture.jpg" alt="passportPicture" class="card-img img-fluid">
                 </div>
 
 
@@ -112,7 +114,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul>
-                                <li>Name : China Siva Satyam</li>
+                                <li>Name : Deekshith Golla</li>
                                 <li>Age: 22</li>
                                 <li>Occupation: Web Developer</li>
                             </ul>
@@ -267,7 +269,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-3">
-                        <img src="/Images/card-1.png" class="card-img-top" alt="...">
+                        <img src="./Images/card-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Pokemon Website</h5>
                             <p class="card-text">This is a website that shows the output after importing various pokemon
@@ -277,7 +279,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-3">
-                        <img src="/Images/card-2.png" class="card-img-top" alt="...">
+                        <img src="./Images/card-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">ToDo List</h5>
                             <p class="card-text">The website works as a todo list and is completely dependent on
@@ -287,7 +289,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-3">
-                        <img src="/Images/card-3.png" class="card-img-top" alt="...">
+                        <img src="./Images/card-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Pricing Panel</h5>
                             <p class="card-text">This website gives us various subscription plans available. We have
@@ -297,7 +299,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-3">
-                        <img src="/Images/card-4.png" class="card-img-top" alt="...">
+                        <img src="./Images/card-4.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Museum Of Candy</h5>
                             <p class="card-text">The website contains a list of candy items available at the museum
